name: reactive-banana
version: 1.1.0.1
cabal-version: >=1.16
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: Heinrich Apfelmus <apfelmus quantentunnel de>
homepage: http://wiki.haskell.org/Reactive-banana
synopsis: Library for functional reactive programming (FRP).
description:
    Reactive-banana is a library for Functional Reactive Programming (FRP).
    .
    FRP offers an elegant and concise way to express interactive programs such as graphical user interfaces, animations, computer music or robot controllers. It promises to avoid the spaghetti code that is all too common in traditional approaches to GUI programming.
    .
    See the project homepage <http://wiki.haskell.org/Reactive-banana>
    for more detailed documentation and examples.
    .
    /Stability forecast./
    This is a stable library, though minor API changes are still likely.
    It features an efficient, push-driven implementation
    and has seen some optimization work.
    .
    /API guide./
    Start with the "Reactive.Banana" module.
category: FRP
author: Heinrich Apfelmus
extra-source-files:
    CHANGELOG.md
    doc/examples/*.hs
    src/Reactive/Banana/Test.hs
    src/Reactive/Banana/Test/Plumbing.hs
extra-doc-files: doc/*.png

source-repository head
    type: git
    location: git://github.com/HeinrichApfelmus/reactive-banana.git
    subdir: reactive-banana/

library
    exposed-modules:
        Control.Event.Handler
        Reactive.Banana
        Reactive.Banana.Combinators
        Reactive.Banana.Frameworks
        Reactive.Banana.Model
        Reactive.Banana.Prim
        Reactive.Banana.Prim.Cached
    build-depends:
        base >=4.2 && <5,
        containers >=0.5 && <0.6,
        transformers >=0.2 && <0.6,
        vault ==0.3.*,
        unordered-containers >=0.2.1.0 && <0.3,
        hashable >=1.1 && <1.3,
        pqueue >=1.0 && <1.4
    default-language: Haskell98
    hs-source-dirs: src
    other-modules:
        Control.Monad.Trans.ReaderWriterIO
        Control.Monad.Trans.RWSIO
        Reactive.Banana.Internal.Combinators
        Reactive.Banana.Prim.Combinators
        Reactive.Banana.Prim.Compile
        Reactive.Banana.Prim.Dependencies
        Reactive.Banana.Prim.Evaluation
        Reactive.Banana.Prim.Graph
        Reactive.Banana.Prim.IO
        Reactive.Banana.Prim.OrderedBag
        Reactive.Banana.Prim.Plumbing
        Reactive.Banana.Prim.Test
        Reactive.Banana.Prim.Types
        Reactive.Banana.Prim.Util
        Reactive.Banana.Types

executable test-weak-pointers

--    if impl(ghcjs -any)
--        cpp-options: -DGHCJS_TRACE_WEAK
    main-is: Main.hs
    build-depends:
        base >=4.8 && <4.9,
        containers >=0.5 && <0.6,
        transformers >=0.2 && <0.6,
        vault ==0.3.*,
        unordered-containers >=0.2.1.0 && <0.3,
        hashable >=1.1 && <1.3,
        pqueue >=1.0 && <1.4
    default-language: Haskell98
    hs-source-dirs: src
    other-modules:
        Control.Event.Handler
        Reactive.Banana
        Reactive.Banana.Combinators
        Reactive.Banana.Frameworks
        Reactive.Banana.Model
        Reactive.Banana.Prim
        Reactive.Banana.Prim.Cached
        Control.Monad.Trans.ReaderWriterIO
        Control.Monad.Trans.RWSIO
        Reactive.Banana.Internal.Combinators
        Reactive.Banana.Prim.Combinators
        Reactive.Banana.Prim.Compile
        Reactive.Banana.Prim.Dependencies
        Reactive.Banana.Prim.Evaluation
        Reactive.Banana.Prim.Graph
        Reactive.Banana.Prim.IO
        Reactive.Banana.Prim.OrderedBag
        Reactive.Banana.Prim.Plumbing
        Reactive.Banana.Prim.Test
        Reactive.Banana.Prim.Types
        Reactive.Banana.Prim.Util
        Reactive.Banana.Types
    ghc-options: -O0

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Reactive/Banana/Test.hs
    build-depends:
        base >=4.2 && <5,
        HUnit >=1.2 && <2,
        test-framework >=0.6 && <0.9,
        test-framework-hunit >=0.2 && <0.4,
        reactive-banana -any,
        vault -any,
        containers -any,
        transformers -any,
        unordered-containers -any,
        hashable -any,
        psqueues -any,
        pqueue -any
    default-language: Haskell98
    hs-source-dirs: src
